--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,20 @@
 <resources>
     <string name="app_name">SoundObservatory</string>
 
+    <string name="back_description">Back</string>
+    <string name="search_description">Search</string>
+    <string name="sort_options_button_description">Open sorting options menu</string>
+
     <string name="name_ascending_description">Name ascending</string>
     <string name="name_descending_description">Name descending</string>
     <string name="order_added_description">Order added</string>
+
+    <string name="item_play_description">Play %1$s</string>
+    <string name="item_pause_description">Pause %1$s</string>
+    <string name="item_options_button_description">%1$s more options</string>
+    <string name="item_rename_description">Rename</string>
+    <string name="item_delete_desrciption">Delete</string>
+
+    <string name="rename_dialog_title">Rename %1$s</string>
+    <string name="confirm_delete_message">Are you sure you want to delete %1$s? This cannot be undone.</string>
 </resources>
