--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="item_rename_description">Rename</string>
     <string name="item_delete_desrciption">Delete</string>
 
+    <string name="add_button_description">Add track</string>
+    <string name="add_button_expanded_description">Cancel add track</string>
+
     <string name="rename_dialog_title">Rename %1$s</string>
     <string name="confirm_delete_message">Are you sure you want to delete %1$s? This cannot be undone.</string>
 </resources>
