Add play/pause button to MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,17 @@
     <string name="item_play_description">Play %1$s</string>
     <string name="item_pause_description">Pause %1$s</string>
     <string name="item_options_button_description">%1$s more options</string>
-    <string name="item_rename_description">Rename</string>
-    <string name="item_delete_description">Delete</string>
 
     <string name="add_button_description">Add track</string>
     <string name="add_button_expanded_description">Cancel add track</string>
 
+    <string name="item_rename_description">Rename</string>
     <string name="rename_dialog_title">Rename %1$s</string>
-    <string name="confirm_delete_message">Are you sure you want to delete %1$s? This cannot be undone.</string>
+
+    <string name="item_delete_description">Delete</string>
+    <string name="confirm_delete_message">Are you sure you want to remove %1$s from your library? This cannot be undone.</string>
+
     <string name="track_name_description">Track name</string>
+    <string name="play_description">Play composition</string>
+    <string name="pause_description">Pause composition</string>
 </resources>
