--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
-<!-- This file is part of SoundObservatory, which is released under the
-   ~ Apache License 2.0. See license.md in the project's root directory
-   ~ or use an internet search engine to see the full license. -->
+<!-- This file is part of SoundAura, which is released under
+   ~ the terms of the Apache License 2.0. See license.md in
+   ~ the project's root directory to see the full license. -->
 
 <resources>
-    <string name="app_name">SoundObservatory</string>
+    <string name="app_name">SoundAura</string>
     <string name="app_player_service_description">A service to play the user\'s sound mix.</string>
     <string name="player_notification_channel_id">player_controls</string>
     <string name="player_notification_channel_name">Player controls</string>
