Decouple TogglePlaybackTileService from PlayerService.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,14 @@
     <string name="player_notification_channel_name">Player controls</string>
     <string name="player_notification_channel_description">
         A notification that contains player controls.</string>
+    <string name="set_playback_action">com.cliffracertech.soundaura.action.playPause</string>
+    <string name="set_playback_key">playback_value</string>
+    <string name="stop_playback_action">com.cliffracertech.soundaura.action.stop</string>
 
     <string name="tile_inactive_subtitle">Stopped</string>
     <string name="tile_active_subtitle">Playing</string>
     <string name="tile_inactive_description">Play SoundAura audio</string>
-    <string name="tile_active_description">Stop SoundAura</string>
+    <string name="tile_active_description">Stop SoundAura audio</string>
 
     <string name="back_description">Back</string>
     <string name="search_description">Search</string>
